deps/v8/test/message/regress/fail/regress-crbug-661579.out
# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:7: TypeError: a.push is not a function
  a.push();
    ^
TypeError: a.push is not a function
    at foo (*%(basename)s:7:5)
    at bar (*%(basename)s:10:3)
    at *%(basename)s:12:1
